crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_property_decorator_void_0.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---

import { Injectable } from '@angular/core';
import { __decorate } from "tslib";

function Validate() { return function(t: any, k: string) {}; }
function Log(target: any, key: string, desc: PropertyDescriptor) {}

let MyService = class MyService {
    name: string = '';

    greet() { return 'hello'; }
};
__decorate([Validate()], MyService.prototype, "name", void 0);
__decorate([Log], MyService.prototype, "greet", null);
MyService = __decorate([
    Injectable()
], MyService);
export { MyService };
